--- a/travelRecord/build.gradle
+++ b/travelRecord/build.gradle
@@ -23,6 +23,10 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//H2 DB추가
+	runtimeOnly 'com.h2database:h2'
+	//JPA 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
