--- a/travelRecord/src/main/resources/application.yml
+++ b/travelRecord/src/main/resources/application.yml
@@ -1,19 +1,26 @@
 #h2 DB 설정
 spring:
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/test
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
   datasource:
-    url: jdbc:h2:tcp://localhost/~/test
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+      url: jdbc:mysql://stam.iptime.org:5306/basicedu?serverTimezone=Asia/Seoul
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      username: basicedu
+      password: basicedu2020
 
 #JPA 설정
   jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    open-in-view: false
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
         show_sql: true
         format_sql: true
-      
+
 logging.level:
   org.hibernate.SQL: debug
