[브랜치 PSY 첫 커밋] security 세팅 로그인 화면 구성 로그인 api 테스트

--- a/travelRecord/bin/main/application.yml
+++ b/travelRecord/bin/main/application.yml
@@ -5,14 +5,19 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  security:
+    user:
+      name: user
+      password: 1234
 
 #JPA 설정
-jpa:
-  hibernate:
-    ddl-auto: create
-  properties:
+  jpa:
     hibernate:
-      show_sql: true
-      format_sql: true
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+      
 logging.level:
   org.hibernate.SQL: debug
