--- a/travelRecord/build.gradle
+++ b/travelRecord/build.gradle
@@ -19,6 +19,8 @@ repositories {
 }
 
 dependencies {
+	// Spring Security 추가
+	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
@@ -32,6 +34,7 @@ dependencies {
 	//JPA 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
+ext['spring-security.version']='5.7.3'
 
 tasks.named('test') {
 	useJUnitPlatform()
