--- a/travelRecord/src/main/resources/application.yml
+++ b/travelRecord/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  security:
+    user:
+      name: user
+      password: 1234
 
 #JPA 설정
   jpa:
