--- a/travel_record_view/android/app/src/profile/AndroidManifest.xml
+++ b/travel_record_view/android/app/src/profile/AndroidManifest.xml
@@ -5,4 +5,22 @@
          to allow setting breakpoints, to provide hot reload, etc.
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <application
+        android:allowBackup="false"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name">
+        <activity 
+            android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity"
+            android:exported="true">
+            <intent-filter android:label="flutter_web_auth">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Redirect URI, "kakao${YOUR_NATIVE_APP_KEY}://oauth" 형식 -->
+                <data android:scheme="kakaoace8dd210b35ffb75ca3aa2378371c6f" android:host="oauth"/>
+            </intent-filter>
+        </activity>
+    </application>
+    
 </manifest>
