--- a/travel_record_view/pubspec.yaml
+++ b/travel_record_view/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+  kakao_flutter_sdk_user: ^1.2.1 # 카카오 로그인
 
 dev_dependencies:
   flutter_test:
