--- a/travelRecord/build.gradle
+++ b/travelRecord/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	//JPA 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 }
 ext['spring-security.version']='5.7.3'
 
