--- a/travel_record_view/pubspec.yaml
+++ b/travel_record_view/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_secure_storage:
+  fluttertoast:
 
 
   # The following adds the Cupertino Icons font to your application.
