--- a/travel_record_view/pubspec.yaml
+++ b/travel_record_view/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^10.1.0
+  flutter_rating_bar: ^4.0.1
+  intl: ^0.17.0
+  animations: ^2.0.3
   fluttertoast : ^8.0.8
   http: ^0.13.5
 
@@ -60,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - lib/asstes/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
