--- a/travel_record_view/pubspec.yaml
+++ b/travel_record_view/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   flutter_secure_storage:
   fluttertoast:
+  dio: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
