--- a/travelRecord/bin/main/application.yml
+++ b/travelRecord/bin/main/application.yml
@@ -12,15 +12,19 @@ spring:
       password: basicedu2020
 
 #JPA 설정
-  jpa:
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    open-in-view: false
+jpa:
+  hibernate:
+    ddl-auto: update
+  properties:
     hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-
+      show_sql: true
+      format_sql: true
 logging.level:
   org.hibernate.SQL: debug
+
+server:
+ servlet:
+  encoding:
+   force: true
+   charset: UTF-8
+   
