--- a/travelRecord/src/main/resources/application.yml
+++ b/travelRecord/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       name: user
       password: 123
   datasource:
-      url: jdbc:mysql://stam.iptime.org:5306/basicedu?serverTimezone=Asia/Seoul
+      url: jdbc:mysql://stam.iptime.org:5306/travelrecord?serverTimezone=Asia/Seoul
       driver-class-name: com.mysql.cj.jdbc.Driver
       username: basicedu
       password: basicedu2020
